# haqlyERP

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
src-ai/: pyproject.toml  requirements.txt
src-ai/naija_finance_accounting_intelligence_engine/: __init__.py
src-ai/naija_finance_accounting_intelligence_engine/accounting/: __init__.py  adjustments.py  closing.py  journal_engine.py  ledger_engine.py  lifecycle.py  methods.py  transaction_recognition.py  trial_balance.py
src-ai/naija_finance_accounting_intelligence_engine/agents/: __init__.py  audit_agent.py  base_agent.py  finance_agent.py  journal_agent.py  ledger_agent.py  reporting_agent.py  tax_agent.py
src-ai/naija_finance_accounting_intelligence_engine/api/: main.py
src-ai/naija_finance_accounting_intelligence_engine/audit_intelligence/: __init__.py  audit_trail_generation.py  audit_working_papers.py  exception_detection.py  sampling_logic.py
src-ai/naija_finance_accounting_intelligence_engine/budgeting/: __init__.py  annual_budget.py  budget_vs_actual.py  rolling_forecast.py  variance_analysis.py
src-ai/naija_finance_accounting_intelligence_engine/core/: __init__.py  config.py  engine.py  exceptions.py  logging.py  registry.py
src-ai/naija_finance_accounting_intelligence_engine/data_governance/: __init__.py  access_control.py  validation.py  versioning.py
src-ai/naija_finance_accounting_intelligence_engine/datasets/: __init__.py
src-ai/naija_finance_accounting_intelligence_engine/db/: database.py  session.py
src-ai/naija_finance_accounting_intelligence_engine/document_intelligence/: __init__.py  document_classifier.py  file_manager.py  ocr_processor.py
src-ai/naija_finance_accounting_intelligence_engine/erp_integration/: __init__.py  api_communication.py  database_connections.py  third_party_integration.py
src-ai/naija_finance_accounting_intelligence_engine/export/: __init__.py  csv_export.py  excel_export.py  pdf_export.py
src-ai/naija_finance_accounting_intelligence_engine/financial_analysis/: __init__.py  efficiency_ratios.py  leverage_ratios.py  liquidity_ratios.py  peer_comparison.py  profitability_ratios.py  trend_analysis.py
src-ai/naija_finance_accounting_intelligence_engine/fx_accounting/: __init__.py  exchange_rates.py  fx_gain_loss.py  multi_currency.py
src-ai/naija_finance_accounting_intelligence_engine/ifrs/: __init__.py  ias12_income_taxes.py  ias16_ppe.py  ias2_inventory.py  ias37_provisions.py  ifrs15_revenue.py  ifrs16_leases.py  ifrs9_financial_instruments.py
src-ai/naija_finance_accounting_intelligence_engine/industry_analytics/: __init__.py  automotive_kpi.py  banking_kpi.py  custom_kpi.py  manufacturing_kpi.py  retail_kpi.py
src-ai/naija_finance_accounting_intelligence_engine/industry_profiles/: __init__.py  agriculture.py  automotive.py  banking.py  construction.py  education.py  government.py  healthcare.py  insurance.py  logistics.py  manufacturing.py  ngo.py  oil_gas.py  retail.py  technology.py  telecommunications.py
src-ai/naija_finance_accounting_intelligence_engine/inflation_accounting/: __init__.py  inflation_adjusted.py  real_nominal.py
src-ai/naija_finance_accounting_intelligence_engine/internal_controls/: __init__.py  audit_trail.py  roles.py  segregation_of_duties.py  user_accountability.py
src-ai/naija_finance_accounting_intelligence_engine/macroeconomic/: __init__.py  fx_volatility.py  gdp_trends.py  inflation_rates.py  interest_rates.py  scenario_analysis.py
src-ai/naija_finance_accounting_intelligence_engine/multi_company/: __init__.py  consolidation.py  group_reporting.py  intercompany.py  minority_interest.py
src-ai/naija_finance_accounting_intelligence_engine/nigerian_economic/: __init__.py  fuel_price.py  fx_restrictions.py  import_dependency.py  inflation_pressure.py  public_sector.py
src-ai/naija_finance_accounting_intelligence_engine/regulatory/: __init__.py  cama.py  cbn_policies.py  dynamic_updates.py  firs_rules.py  nbs_structures.py  nigerian_tax_laws.py
src-ai/naija_finance_accounting_intelligence_engine/reporting/: __init__.py  annual_reporting.py  balance_sheet.py  cash_flow_statement.py  disclosure_engine.py  income_statement.py  monthly_reporting.py  notes_to_accounts.py  quarterly_reporting.py
src-ai/naija_finance_accounting_intelligence_engine/risk_management/: __init__.py  credit_risk.py  liquidity_risk.py  market_risk.py  risk_dashboard.py
src-ai/naija_finance_accounting_intelligence_engine/schemas/: __init__.py  audit.py  budget.py  chart_of_accounts.py  company.py  financial_statement.py  fx.py  journal.py  ledger.py  ocr_document.py  tax.py  transaction.py  treasury.py
src-ai/naija_finance_accounting_intelligence_engine/tax_engine/: __init__.py  capital_gains_tax.py  cit.py  education_tax.py  stamp_duties.py  tax_returns.py  tax_risk_flags.py  tax_schedules.py  vat.py  wht.py
src-ai/naija_finance_accounting_intelligence_engine/tests/: __init__.py  test_agents.py  test_financial_statements.py  test_ifrs_compliance.py  test_industry_profiles.py  test_journal_accuracy.py  test_ledger_accuracy.py  test_risk.py  test_tax_computation.py  test_valuation.py
src-ai/naija_finance_accounting_intelligence_engine/treasury/: __init__.py  bank_reconciliation.py  cash_position.py  debt_scheduling.py  interest_tracking.py  loan_management.py
src-ai/naija_finance_accounting_intelligence_engine/valuation/: __init__.py  dcf.py  investment_feasibility.py  irr.py  npv.py  wacc.py
src-ai/naija_finance_accounting_intelligence_engine/working_capital/: __init__.py  accounts_payable.py  accounts_receivable.py  dso_dpo_inventory_days.py  inventory_management.py
src-server/: Cargo.toml
src-server/src/: lib.rs  main.rs
src-server/src/config/: env.rs  mod.rs  rsa_keys.rs  settings.rs
src-server/tests/: integration_einvoicing.rs  integration_journal_posting.rs  integration_payroll_gl.rs  integration_tax_journal.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+273 files in other folders)
