[workspace]
resolver = "2"
members = [
    "src-tauri",
    "src-server",
]

[workspace.package]
version = "0.1.0"
authors = ["Quadri Atharu"]
edition = "2021"
license = "Proprietary"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "json", "bigdecimal"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
