[package]
name = "haqly-erp-server"
version = "0.1.0"
edition = "2021"
authors = ["Quadri Atharu"]
description = "HAQLY ERP - Nigerian Accounting & Business Management Backend"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
thiserror = "1"
anyhow = "1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "auth"] }
validator = { version = "0.16", features = ["derive"] }
oauth2 = "4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
aes-gcm = "0.10"
base64 = "0.21"
csv = "1"
rust_xlsxwriter = "0.62"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
cron = "0.12"
lru = "0.12"
dotenvy = "0.15"
bigdecimal = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
