[package]
name = "haqly-erp-server"
version = "0.1.0"
edition = "2021"
authors = ["Quadri Atharu"]
description = "HAQLY ERP - Nigerian Accounting & Business Management Backend"

[[bin]]
name = "haqly-server"
path = "src/bin/server.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "migrate",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
thiserror = "1"
anyhow = "1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "auth"] }
validator = { version = "0.16", features = ["derive"] }
oauth2 = "4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
csv = "1"
rust_xlsxwriter = "0.62"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
cron = "0.12"
lru = "0.12"
dotenvy = "0.15"
bigdecimal = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
rsa = { version = "0.9", features = ["pem"] }
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }
tower_governor = "0.4"
governor = "0.6"
hex = "0.4"
parking_lot = "0.12"
regex = "1"
flate2 = "1"
bytes = "1"
futures = "0.3"
num-traits = "0.2"
