[package]
name = "haqly-erp"
version = "0.1.0"
description = "HAQLY ERP — Nigerian Accounting Desktop Application"
authors = ["Quadri Atharu"]
edition = "2021"
rust-version = "1.77.0"
license = "Proprietary"
repository = "https://github.com/haqly/erp-desktop"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
thiserror = "2"
anyhow = "1"

image = "0.25"
pdf-extract = "0.7"
base64 = "0.22"
regex = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[profile.dev]
debug = 1
